I'm using macros to set timers configuration, it is unfinished but working.

--- a/TIMER_project/Objects/timer_test_project.build_log.htm
+++ b/TIMER_project/Objects/timer_test_project.build_log.htm
@@ -28,6 +28,41 @@ Project File Date:  12/21/2022
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Target 1'
 assembling startup_stm32f10x_md.s...
+_TIM_CONFIG.c(180): warning: no previous prototype for function 'TIM2_IRQHandler' [-Wmissing-prototypes]
+void TIM2_IRQHandler(void){
+     ^
+_TIM_CONFIG.c(180): note: declare 'static' if the function is not intended to be used outside of this translation unit
+void TIM2_IRQHandler(void){
+^
+static 
+_TIM_CONFIG.c(185): warning: no previous prototype for function 'TIM3_IRQHandler' [-Wmissing-prototypes]
+void TIM3_IRQHandler(void){
+     ^
+_TIM_CONFIG.c(185): note: declare 'static' if the function is not intended to be used outside of this translation unit
+void TIM3_IRQHandler(void){
+^
+static 
+_TIM_CONFIG.c(190): warning: no previous prototype for function 'TIM4_IRQHandler' [-Wmissing-prototypes]
+void TIM4_IRQHandler(void){
+     ^
+_TIM_CONFIG.c(190): note: declare 'static' if the function is not intended to be used outside of this translation unit
+void TIM4_IRQHandler(void){
+^
+static 
+_TIM_CONFIG.c(1): warning: In file included from...
+./_TIM_CONFIG.h(5): warning: In file included from...
+./_HAL_GPIO.h(73): warning: unused function 'config_pin' [-Wunused-function]
+static void config_pin(GPIO_TypeDef *port, uint32_t pinNumber, uint32_t mode_type);
+            ^
+./_HAL_GPIO.h(74): warning: unused function 'config_pin_speed' [-Wunused-function]
+static void config_pin_speed(GPIO_TypeDef *port, uint32_t pinNumber, uint32_t pinSpeed, uint32_t mode);
+            ^
+_TIM_CONFIG.c(2): warning: In file included from...
+./printMsg.h(22): warning: unused function 'UsartBaudRateSet' [-Wunused-function]
+static uint8_t UsartBaudRateSet(USART_TypeDef *UsartP, uint32_t baudR); 
+               ^
+6 warnings generated.
+compiling _TIM_CONFIG.c...
 RTE/Device/STM32F103C8/system_stm32f10x.c(166): warning: no previous extern declaration for non-static variable 'AHBPrescTable' [-Wmissing-variable-declarations]
 __I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9};
             ^
@@ -36,141 +71,14 @@ __I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9}
     ^
 1 warning generated.
 compiling system_stm32f10x.c...
-_TIM_CONFIG.c(1): warning: In file included from...
-./_TIM_CONFIG.h(26): warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
-static configTimer(myTIMERcfg mytimer);
-~~~~~~ ^
-./_TIM_CONFIG.h(27): warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
-static gpioTimerConfig(GPIO_TYPE gpio);
-~~~~~~ ^
-_TIM_CONFIG.c(9): error: unknown type name 'mytimer4'
-mytimer4.port = PORTB;  
-^
-_TIM_CONFIG.c(9): error: expected identifier or '('
-mytimer4.port = PORTB;  
-        ^
-_TIM_CONFIG.c(10): error: unknown type name 'mytimer4'
-mytimer4.pin = 6;
-^
-_TIM_CONFIG.c(10): error: expected identifier or '('
-mytimer4.pin = 6;
-        ^
-_TIM_CONFIG.c(12): error: expected ')'
-GPIO_TYPE tim3;         TIM3.pin = 
-                        ^
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1389): note: expanded from macro 'TIM3'
-#define TIM3                ((TIM_TypeDef *) TIM3_BASE)
-                                          ^
-_TIM_CONFIG.c(12): note: to match this '('
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1389): note: expanded from macro 'TIM3'
-#define TIM3                ((TIM_TypeDef *) TIM3_BASE)
-                             ^
-_TIM_CONFIG.c(12): error: expected ')'
-GPIO_TYPE tim3;         TIM3.pin = 
-                        ^
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1389): note: expanded from macro 'TIM3'
-#define TIM3                ((TIM_TypeDef *) TIM3_BASE)
-                                             ^
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1295): note: expanded from macro 'TIM3_BASE'
-#define TIM3_BASE             (APB1PERIPH_BASE + 0x0400)
-                               ^
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1290): note: expanded from macro 'APB1PERIPH_BASE'
-#define APB1PERIPH_BASE       PERIPH_BASE
-                              ^
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1282): note: expanded from macro 'PERIPH_BASE'
-#define PERIPH_BASE           ((uint32_t)0x40000000) /*!< Peripheral base address in the alias region */
-                                         ^
-_TIM_CONFIG.c(12): note: to match this '('
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1389): note: expanded from macro 'TIM3'
-#define TIM3                ((TIM_TypeDef *) TIM3_BASE)
-                                             ^
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1295): note: expanded from macro 'TIM3_BASE'
-#define TIM3_BASE             (APB1PERIPH_BASE + 0x0400)
-                               ^
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1290): note: expanded from macro 'APB1PERIPH_BASE'
-#define APB1PERIPH_BASE       PERIPH_BASE
-                              ^
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1282): note: expanded from macro 'PERIPH_BASE'
-#define PERIPH_BASE           ((uint32_t)0x40000000) /*!< Peripheral base address in the alias region */
-                              ^
-_TIM_CONFIG.c(12): warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
-GPIO_TYPE tim3;         TIM3.pin = 
-                        ^
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1389): note: expanded from macro 'TIM3'
-#define TIM3                ((TIM_TypeDef *) TIM3_BASE)
-                                             ^
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1295): note: expanded from macro 'TIM3_BASE'
-#define TIM3_BASE             (APB1PERIPH_BASE + 0x0400)
-                               ^
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1290): note: expanded from macro 'APB1PERIPH_BASE'
-#define APB1PERIPH_BASE       PERIPH_BASE
-                              ^
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1282): note: expanded from macro 'PERIPH_BASE'
-#define PERIPH_BASE           ((uint32_t)0x40000000) /*!< Peripheral base address in the alias region */
-                                ^
-_TIM_CONFIG.c(12): warning: redundant parentheses surrounding declarator [-Wredundant-parens]
-GPIO_TYPE tim3;         TIM3.pin = 
-                        ^~~~
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1389): note: expanded from macro 'TIM3'
-#define TIM3                ((TIM_TypeDef *) TIM3_BASE)
-                                             ^~~~~~~~~
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1295): note: expanded from macro 'TIM3_BASE'
-#define TIM3_BASE             (APB1PERIPH_BASE + 0x0400)
-                               ^~~~~~~~~~~~~~~
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1290): note: expanded from macro 'APB1PERIPH_BASE'
-#define APB1PERIPH_BASE       PERIPH_BASE
-                              ^~~~~~~~~~~
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1282): note: expanded from macro 'PERIPH_BASE'
-#define PERIPH_BASE           ((uint32_t)0x40000000) /*!< Peripheral base address in the alias region */
-                              ^~~~~~~~~~~~~~~~~~~~~~
-_TIM_CONFIG.c(12): error: expected ')'
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1389): note: expanded from macro 'TIM3'
-#define TIM3                ((TIM_TypeDef *) TIM3_BASE)
-                                             ^
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1295): note: expanded from macro 'TIM3_BASE'
-#define TIM3_BASE             (APB1PERIPH_BASE + 0x0400)
-                                               ^
-_TIM_CONFIG.c(12): note: to match this '('
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1389): note: expanded from macro 'TIM3'
-#define TIM3                ((TIM_TypeDef *) TIM3_BASE)
-                                             ^
-C:/Users/Administrator/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(1295): note: expanded from macro 'TIM3_BASE'
-#define TIM3_BASE             (APB1PERIPH_BASE + 0x0400)
-                              ^
-_TIM_CONFIG.c(12): error: expected function body after function declarator
-GPIO_TYPE tim3;         TIM3.pin = 
-                            ^
-_TIM_CONFIG.c(12): warning: no previous extern declaration for non-static variable 'tim3' [-Wmissing-variable-declarations]
-GPIO_TYPE tim3;         TIM3.pin = 
-          ^
-_TIM_CONFIG.c(12): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-GPIO_TYPE tim3;         TIM3.pin = 
-^
-5 warnings and 8 errors generated.
-compiling _TIM_CONFIG.c...
-main.c(1): warning: In file included from...
-./_TIM_CONFIG.h(26): warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
-static configTimer(myTIMERcfg mytimer);
-~~~~~~ ^
-./_TIM_CONFIG.h(27): warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
-static gpioTimerConfig(GPIO_TYPE gpio);
-~~~~~~ ^
-./_TIM_CONFIG.h(21): warning: padding struct 'myTIMERcfg' with 1 byte to align 'preScalar' [-Wpadded]
-        uint16_t preScalar;
-                 ^
-./_TIM_CONFIG.h(18): warning: padding size of 'myTIMERcfg' with 2 bytes to alignment boundary [-Wpadded]
-typedef struct{
-        ^
-main.c(10): warning: mixing declarations and code is incompatible with standards before C99 [-Wdeclaration-after-statement]
-        GPIO_TYPE myLED;
-                  ^
-main.c(33): warning: variable 'x' set but not used [-Wunused-but-set-variable]
+main.c(22): warning: mixing declarations and code is incompatible with standards before C99 [-Wdeclaration-after-statement]
         uint16_t x = 0;
                  ^
-main.c(42): warning: no previous prototype for function 'EXTI4_IRQHandler' [-Wmissing-prototypes]
+main.c(22): warning: variable 'x' set but not used [-Wunused-but-set-variable]
+main.c(32): warning: no previous prototype for function 'EXTI4_IRQHandler' [-Wmissing-prototypes]
 void EXTI4_IRQHandler(void){
      ^
-main.c(42): note: declare 'static' if the function is not intended to be used outside of this translation unit
+main.c(32): note: declare 'static' if the function is not intended to be used outside of this translation unit
 void EXTI4_IRQHandler(void){
 ^
 static 
@@ -182,18 +90,11 @@ static void config_pin(GPIO_TypeDef *port, uint32_t pinNumber, uint32_t mode_typ
 ./_HAL_GPIO.h(74): warning: unused function 'config_pin_speed' [-Wunused-function]
 static void config_pin_speed(GPIO_TypeDef *port, uint32_t pinNumber, uint32_t pinSpeed, uint32_t mode);
             ^
-main.c(1): warning: In file included from...
-./_TIM_CONFIG.h(26): warning: unused function 'configTimer' [-Wunused-function]
-static configTimer(myTIMERcfg mytimer);
-       ^
-./_TIM_CONFIG.h(27): warning: unused function 'gpioTimerConfig' [-Wunused-function]
-static gpioTimerConfig(GPIO_TYPE gpio);
-       ^
 main.c(3): warning: In file included from...
 ./printMsg.h(22): warning: unused function 'UsartBaudRateSet' [-Wunused-function]
 static uint8_t UsartBaudRateSet(USART_TypeDef *UsartP, uint32_t baudR); 
                ^
-12 warnings generated.
+6 warnings generated.
 compiling main.c...
 printMsg.c(186): warning: implicitly declaring library function 'vsprintf' with type 'int (char *, const char *, __builtin_va_list)' [-Wimplicit-function-declaration]
         vsprintf(buff, msg, args);
@@ -202,7 +103,10 @@ printMsg.c(186): note: include the header <stdio.h> or explicitly provide a decl
 printMsg.c(186): warning: format string is not a string literal [-Wformat-nonliteral]
         vsprintf(buff, msg, args);
                        ^~~
-2 warnings generated.
+printMsg.c(199): warning: no newline at end of file [-Wnewline-eof]
+        printer.Uart_instance = USART1; */
+                                          ^
+3 warnings generated.
 compiling printMsg.c...
 _HAL_GPIO.c(9): warning: no previous extern declaration for non-static variable 'PINPOS' [-Wmissing-variable-declarations]
 uint32_t PINPOS[16]= {//takes me to the 1st BIT in MODE
@@ -212,7 +116,9 @@ uint32_t PINPOS[16]= {//takes me to the 1st BIT in MODE
 ^
 1 warning generated.
 compiling _HAL_GPIO.c...
-".\Objects\timer_test_project.axf" - 8 Error(s), 21 Warning(s).
+linking...
+Program Size: Code=2416 RO-data=268 RW-data=64 ZI-data=1632  
+".\Objects\timer_test_project.axf" - 0 Error(s), 17 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -239,11 +145,10 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.6.0
 
    * Component: Keil::Device:Startup:1.0.0
-      Include file:  RTE_Driver/Config/RTE_Device.h
-      Source file:   Device/Source/system_stm32f10x.c
       Source file:   Device/Source/ARM/STM32F1xx_OPT.s
+      Source file:   Device/Source/system_stm32f10x.c
       Source file:   Device/Source/ARM/startup_stm32f10x_md.s
-Target not created.
+      Include file:  RTE_Driver/Config/RTE_Device.h
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
